# PainGL

./: .gitignore  CMakeLists.txt
assets/header/: bushes.h  gift.h
assets/model/: plain.h  pyramid.h  suzi_flat.h  triangle.h
assets/model/header/: gift.h  plain.h  plain_texture.h  pyramid.h  sphere.h  suzi_smooth.h  triangle.h
assets/model/hollowknight/: hollowknight.mtl
assets/model/planet/jupiter/: jupiter.mtl
assets/model/planet/mars/: mars.mtl
assets/model/planet/moon/: moon.mtl
assets/model/zombie/: zombie.mtl
assets/shader/: blimmLightShader.frag  fragmentShader.frag  grayVertexShader.vert  lambertLightShader.frag  modelShader.frag  modelShader.vert  phongLightShader.frag  staticLightShader.frag  vertexShader.vert
assets/shader/lights/: blimmLightShader.frag  fullLightShader.frag  lambertLightShader.frag  lightModelShader.frag  phongLightShader.frag  staticLightShader.frag
include/: Engine.h  GUIHandler.h  StringUtils.h
include/buffer/: EBO.h  VAO.h  VBO.h  Vertex.h
include/builder/: AbstractBuilder.h
include/console/: ConsoleCommand.h  ConsoleHandler.h  ConsoleLine.h
include/event/: EventHandler.h  InputController.h
include/event/structure/: Event.h  Listener.h
include/event/type/: CameraEvents.h  KeyBoardEvents.h  LightEvents.h  MouseEvents.h  SceneEvents.h  WindowEvents.h
include/gui/: GUI.h  GUIHandler.h
include/imgui/backend/: imgui_impl_glfw.cpp
include/listener/: EventHandler.h  Input.h
include/listener/event/: KeyboardEvents.h  MouseEvents.h  WindowEvents.h
include/listener/structure/: EventType.h
include/model/: Mesh.h  Model.h  ModelHandler.h
include/scene/: RenderableEntity.h  Scene.h  SceneHandler.h  Transformation.h
include/scene/camera/: Camera.h  CameraHandler.h
include/scene/entity/: BoundingBox.h  Entity.h  EntityHandler.h
include/scene/light/: AbstractLight.h  AbstractRenderableLight.h  Light.h  LightHandler.h
include/scene/sky/: Sky.h
include/scene/skybox/: SkyBox.h
include/scene/structure/: Object.h  Randerable.h  Simulable.h  Transformable.h
include/scene/transformation/: Transform.h  Transformation.h
include/shader/: Program.h  Shader.h  ShaderHandler.h  ShaderProgram.h
include/texture/: Image.h  Texture.h  TextureHandler.h
include/utils/: ColorUtils.h  FileUtils.h  FileUtils.hpp  Logger.h  StringUtils.h
include/window/: Window.h  WindowHandler.h
src/: Engine.cpp  GUIHandler.cpp  Logger.cpp  default.cpp  main.cpp
src/buffer/: EBO.cpp  EBO.h  VAO.cpp  VAO.h  VBO.cpp  VBO.h
src/console/: ConsoleCommand.cpp  ConsoleCommandsFiller.cpp  ConsoleHandler.cpp  ConsoleLine.cpp
src/engine/: Engine.cpp  Engine.h
src/event/: EventHandler.cpp  InputController.cpp
src/gui/: GUI.cpp  GUI.h  GUIFiller.cpp  GUIHandler.cpp  GUIHandler.h
src/listener/: EventHandler.cpp  EventHandler.h  Input.cpp
src/listener/event/: KeyEvents.cpp  KeyEvents.h  KeyboardEvents.h  MouseEvents.cpp  MouseEvents.h  WindowEvents.cpp  WindowEvents.h
src/listener/input/: Input.cpp
src/listener/structure/: Event.h  EventType.h  Listener.h
src/logger/: Logger.cpp  Logger.h
src/model/: Mesh.cpp  Model.cpp  ModelHandler.cpp  ModelHandler.h
src/model/model/: Model.cpp  Model.h
src/scene/: RenderableEntity.cpp  Scene.cpp  Scene.h  SceneHandler.cpp  Transformation.cpp  WindowHandler.cpp
src/scene/camera/: Camera.cpp  Camera.h  CameraHandler.cpp  CameraHandler.h
src/scene/entity/: BoundingBox.cpp  Entity.cpp  EntityHandler.cpp  RenderableEntity.cpp  RenderableEntity.h
src/scene/light/: AbstractLight.cpp  AbstractRenderableLight.cpp  Light.cpp  LightHandler.cpp
src/scene/sky/: Sky.cpp
src/scene/skybox/: SkyBox.cpp
src/scene/transform/: Transformation.cpp  Transformation.h
src/scene/transformation/: Transform.cpp  Transformation.cpp
src/scene/window/: Window.cpp  Window.h  WindowHandler.cpp  WindowHandler.h
src/shader/: Program.cpp  Shader.cpp  ShaderHandler.cpp  ShaderHandler.h  ShaderProgram.cpp
src/shader/program/: Program.cpp  Program.h
src/shader/shader/: Shader.cpp  Shader.h
src/texture/: Image.cpp  Texture.cpp  TextureHandler.cpp
src/utils/: Logger.cpp
src/window/: Window.cpp  WindowHandler.cpp
(+38 files in other folders)
